; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_cc2520.c_cc2520_set_txpower.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ieee802154/extr_cc2520.c_cc2520_set_txpower.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee802154_hw = type { %struct.cc2520_private* }
%struct.cc2520_private = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ieee802154_hw*, i32)* @cc2520_set_txpower to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cc2520_set_txpower(%struct.ieee802154_hw* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ieee802154_hw*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.cc2520_private*, align 8
  store %struct.ieee802154_hw* %0, %struct.ieee802154_hw** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.ieee802154_hw*, %struct.ieee802154_hw** %4, align 8
  %8 = getelementptr inbounds %struct.ieee802154_hw, %struct.ieee802154_hw* %7, i32 0, i32 0
  %9 = load %struct.cc2520_private*, %struct.cc2520_private** %8, align 8
  store %struct.cc2520_private* %9, %struct.cc2520_private** %6, align 8
  %10 = load %struct.cc2520_private*, %struct.cc2520_private** %6, align 8
  %11 = getelementptr inbounds %struct.cc2520_private, %struct.cc2520_private* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %18, label %14

14:                                               ; preds = %2
  %15 = load %struct.cc2520_private*, %struct.cc2520_private** %6, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @cc2520_set_tx_power(%struct.cc2520_private* %15, i32 %16)
  store i32 %17, i32* %3, align 4
  br label %22

18:                                               ; preds = %2
  %19 = load %struct.cc2520_private*, %struct.cc2520_private** %6, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @cc2520_cc2591_set_tx_power(%struct.cc2520_private* %19, i32 %20)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %18, %14
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @cc2520_set_tx_power(%struct.cc2520_private*, i32) #1

declare dso_local i32 @cc2520_cc2591_set_tx_power(%struct.cc2520_private*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
